# Ryd-gate-modeling

./: .coverage  .gitignore  README.md  blackman.py  cz_hf_int.py  cz_realistic.py  laser_power_rabi.py  light_phasenoise.py  noise_doc.md  phasenoise_all.py  pyproject.toml  rabi_two_photon.py  ramsey.py  results.json_all.txt  results.json_dephasing.txt  results.json_position.txt  ryd_level_structure.py  utils.py  激光噪声分析.md
data/: det_dark.json  mc_bright_all.txt  mc_bright_dephasing.txt  mc_bright_position.txt  mc_dark_all.txt  mc_dark_dephasing.txt  mc_dark_position.txt
docs/: api.rst  conf.py  error_budget_methodology.md  getting_started.md  index.rst  issue_intermediate_scattering_0_vs_1.md  noise_analysis.md  noise_analysis_results.json  schrodinger_solver.md  simulation_results.json  simulation_results.md  theory.rst  thermal_analysis_results.json  thermal_effects_analysis.md  validation.md
examples/: noise_analysis.py  run_cz_simulation.py
paper/: en_v2.tex
rabi two photon/: rabi_two_photon.py
scripts/: analyze_bright_dark_detuning.py  calibration_sensitivity.py  cz_hf_int.py  draft.py  draft2.py  drafts.py  drafts2.py  error_breakdown_xyz.py  error_budget_table.py  error_deterministic.py  error_monte_carlo.py  full_error_model.py  generate_fidelity_report.py  generate_mc_data.py  generate_noise_report.py  generate_si_tables.py  opt_bright.py  opt_dark.py  opt_hf_new.txt  optimize_to_pulse.py  plot_mid_pop.py  plot_population_evolution.py  plot_population_evolution_sch.py  simultaneous_sensitivity.py  thermal_analysis.py  verify_cz_dark.py  verify_monte_carlo.py
tests/: test_blackman.py  test_clebsch_gordan.py  test_ideal_cz.py  (+6 more)
(+8 files in other folders)
